[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "intsys_car_v1"
version = "0.0.1"
authors = [
  { name="Dr. Dennis Burgermeister", email="dennis@zumlernen.de" },
]
description = "Basic control function for the intsys car v1"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/zumlernen-de/intsys_car_v1"
Issues = "https://github.com/zumlernen-de/intsys_car_v1/issues"